<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:orientation="vertical"
    android:gravity="center">


    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_legend"
        android:textColor="@color/black"
        android:textSize="15pt"
        android:gravity="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="30dp">

        <TextView
            android:id="@+id/tvEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:paddingVertical="15dp"
            android:layout_marginBottom="15dp"/>

        <TextView
            android:id="@+id/tvPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:paddingVertical="15dp"
            android:layout_marginBottom="15dp"/>

        <Button
            android:id="@+id/btnForgetPassword"
            android:layout_marginVertical="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forget_password"
            android:layout_gravity="center"
            android:textColor="@color/text_btn"
            android:textSize="11sp"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            />

        <Button
            android:id="@+id/btnAuth"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="@color/btn"
            android:text="@string/auth"
            app:cornerRadius="20dp" />
    </LinearLayout>
</LinearLayout>